# zcollection

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  conftest.py  pylintrc  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: ci.yaml  docs.yaml  pre-commit.yml  pypipublish.yaml
conda/: environment.yml  meta.yaml
docs/: Makefile
docs/source/: api.rst  conf.py  first_steps.rst  index.rst  install.rst  migration.rst  release.rst  sg_execution_times.rst
docs/source/_templates/autosummary/: base.rst  class.rst  module.rst
docs/source/examples/: ex_collection.py  ex_indexing.py  ex_view.py
examples/: README.rst  ex_collection.py  ex_groups.py  ex_indexing.py  ex_netcdf_to_zcollection.py  ex_view.py  ex_walkthrough.py  walkthrough.py
notebooks/: first_steps.ipynb
scripts/: profile_queries.py  update_copyright.py
zcollection/: __init__.py  aio.py  api.py  collection.py  compressed_array.py  config.py  convenience.py  dask_utils.py  dataset.py  errors.py  expression.py  fs_utils.py  mathematics.py  meta.py  representation.py  storage.py  sync.py  type_hints.py  types.py  typing.py  utilities.py  variable.py  version.py  view.py
zcollection/benches/: __init__.py  __main__.py  harness.py  probe.py
zcollection/cli/: __init__.py  __main__.py  main.py
zcollection/codecs/: __init__.py  defaults.py  sharding.py
zcollection/collection/: __init__.py  abc.py  base.py  callable_objects.py  detail.py  merge.py
zcollection/collection/tests/: test_collection.py
zcollection/convenience/: __init__.py  collection.py  view.py
zcollection/convenience/tests/: test_convenience.py
zcollection/dask/: __init__.py  runner.py  scheduler.py
zcollection/data/: __init__.py  _repr.py  dataset.py  group.py  variable.py
zcollection/indexing/: __init__.py  abc.py  parquet.py
zcollection/indexing/tests/: test_abc.py
zcollection/io/: __init__.py  async_partition.py  immutable.py  partition.py  root.py
zcollection/merging/: __init__.py  period.py  time_series.py
zcollection/merging/tests/: test_merging.py  test_period.py  test_time_series.py
zcollection/partitioning/: __init__.py  abc.py  base.py  catalog.py  date.py  expression.py  grouped.py  registry.py  sequence.py
zcollection/partitioning/tests/: data.py  test_date.py  test_expression.py  test_grouped_sequence.py  test_registry.py  test_sequence.py
zcollection/schema/: __init__.py  attribute.py  builder.py  dataset.py  dimension.py  group.py  serde.py  variable.py  versioning.py
zcollection/store/: __init__.py  _async_bridge.py  base.py  factory.py  icechunk_store.py  layout.py  local.py  memory.py  obstore_store.py
zcollection/tests/: __init__.py  _s3_server.py  cluster.py  conftest.py  data.py  deprecated_dataset.json  first_dataset.json  fixture.py  fs.py  s3.py  second_dataset.json  test_aio.py  test_api.py  test_async_and_dask.py  test_async_bridge.py  test_async_partition_io.py  test_backends.py  test_benches.py  test_catalog_views_indexer.py  test_cli.py  test_collection.py  test_compressed_array.py  test_coverage_extras.py  test_dask_utils.py  test_data_extras.py  test_dataset.py  test_expression.py  test_fs_utils.py  test_group.py  test_icechunk.py  test_io_root.py  test_lowlevel.py  test_mathematics.py  test_meta.py  test_no_zarr_warning.py  test_perf.py  test_phase2.py  test_phase3.py  test_phase4.py  test_roundtrip.py  (+8 more)
zcollection/variable/: __init__.py  abc.py  array.py  delayed_array.py  indexing.py
zcollection/variable/tests/: data.py  test_abc.py  test_array.py  test_delayed_array.py  test_variable.py
zcollection/view/: __init__.py  base.py  detail.py
zcollection/view/tests/: test_view.py
zcollection3/: __init__.py  aio.py  api.py  config.py
zcollection3/benches/: harness.py
zcollection3/cli/: __main__.py  main.py
zcollection3/codecs/: __init__.py  defaults.py  sharding.py
zcollection3/collection/: __init__.py  base.py
zcollection3/dask/: scheduler.py
zcollection3/indexing/: __init__.py
zcollection3/io/: __init__.py  async_partition.py  immutable.py  partition.py
zcollection3/partitioning/: __init__.py  date.py  sequence.py
zcollection3/schema/: builder.py  dataset.py  variable.py  versioning.py
zcollection3/store/: __init__.py  _async_bridge.py  factory.py  icechunk_store.py  layout.py  memory.py
zcollection3/tests/: conftest.py  test_benches.py  test_phase3.py  test_roundtrip.py
