[metadata]
author = CNES/CLS
author_email = fbriol@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics
description = Zarr Collection
license = BSD License
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
name = zcollection
url = https://github.com/CNES/zcollection
version = attr: zcollection.__version__

[options]
include_package_data = True
install_requires =
    dask >= 2022.8.0
    distributed
    fsspec
    numcodecs
    numpy>=1.20
    pandas
    xarray
    zarr>=2.11
package_dir =
    = .
packages = find:
python_requires = >=3.9
zip_safe = False

[options.extras_require]
test =
    pytest
    pytest-cov

[options.package_data]
* = *.json

[flake8]
exclude = docs,tests
max-line-length = 80
ignore =
    # Assigning lambda expression
    E731
    # Ambiguous variable names
    E741
    # line break before binary operator
    W503
    # line break after binary operator
    W504
    # whitespace before :
    E203

[isort]
combine_as_imports=True
force_grid_wrap=0
force_sort_within_sections=True
force_to_top=typing
include_trailing_comma=True
line_length=80
multi_line_output=3
skip=
    build
    docs/source/conf.py

[mypy]
ignore_missing_imports=True
exclude=tests
