[metadata]
author = CNES/CLS
author_email = fbriol@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.14
    Topic :: Scientific/Engineering :: Physics
description = Zarr Collection
keywords = zarr, collection, xarray, dask
license = BSD License
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
name = zcollection
url = https://github.com/CNES/zcollection
version = attr: zcollection.version.__version__

[options]
include_package_data = True
install_requires =
    dask >= 2022.8.0
    distributed
    fsspec
    numcodecs >= 0.13
    numpy >= 1.20
    pandas
    xarray >= 2024.10
    zarr >= 3.1.6
package_dir =
    = .
packages = find:
python_requires = >=3.14
zip_safe = False

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-asyncio
obstore =
    obstore >= 0.5
icechunk =
    icechunk >= 2.0
docs =
    sphinx
    sphinx-book-theme
    sphinx-gallery
    sphinx-inline-tabs
    pypandoc

[options.entry_points]
console_scripts =
    zcollection = zcollection.cli:main

[options.package_data]
* = *.json

[flake8]
exclude = docs,tests
max-line-length = 80
ignore =
    # Assigning lambda expression
    E731
    # Ambiguous variable names
    E741
    # line break before binary operator
    W503
    # line break after binary operator
    W504
    # whitespace before :
    E203

[mypy]
ignore_missing_imports=True
exclude=tests
